[package]
name = "rappelle-laveuse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", rev = "bd4cb82945112ecb847456a3b0b04163341e44fd", features = ["defmt"]}
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "bd4cb82945112ecb847456a3b0b04163341e44fd", features = ["defmt"]}
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "bd4cb82945112ecb847456a3b0b04163341e44fd", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "bd4cb82945112ecb847456a3b0b04163341e44fd", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy.git", rev = "bd4cb82945112ecb847456a3b0b04163341e44fd", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-usb = { git = "https://github.com/embassy-rs/embassy.git", rev = "bd4cb82945112ecb847456a3b0b04163341e44fd", features = ["defmt"] }
embassy-net = { git = "https://github.com/embassy-rs/embassy.git", rev = "bd4cb82945112ecb847456a3b0b04163341e44fd", features = ["defmt", "tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-net-wiznet = { git = "https://github.com/embassy-rs/embassy.git", rev = "bd4cb82945112ecb847456a3b0b04163341e44fd", features = ["defmt"]}
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "bd4cb82945112ecb847456a3b0b04163341e44fd" }
embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy.git", rev = "bd4cb82945112ecb847456a3b0b04163341e44fd" }
cyw43 = { git = "https://github.com/embassy-rs/embassy.git", rev = "bd4cb82945112ecb847456a3b0b04163341e44fd", features = ["defmt", "firmware-logs"] }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy.git", rev = "bd4cb82945112ecb847456a3b0b04163341e44fd", features = ["defmt", "overclock"] }

defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"

#cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
display-interface-spi = "0.4.1"
embedded-graphics = "0.7.1"
st7789 = "0.6.1"
display-interface = "0.4.1"
byte-slice-cast = { version = "1.2.0", default-features = false }
smart-leds = "0.3.0"
heapless = "0.8"
usbd-hid = "0.7.0"

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
static_cell = "2"
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"
rand = { version = "0.8.5", default-features = false }

[profile.release]
debug = 2

# We're using a Pico by default on this template
#rp-pico = "0.8"

# but you can use any BSP. Uncomment this to use the pro_micro_rp2040 BSP instead
# sparkfun-pro-micro-rp2040 = "0.7"

# If you're not going to use a Board Support Package you'll need these:
# rp2040-hal = { version="0.9", features=["rt", "critical-section-impl"] }
# rp2040-boot2 = "0.3"